@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<mime-info xmlns='http://www.freedesktop.org/standards/shared-mime-info'>
+  <mime-type type="audio/midi">
+    <comment>MIDI audio</comment>
+    <magic priority="50">
+		<match type="string" offset="0" value="MThd"/>
+    </magic>
+    <glob pattern="*.mid"/>
+    <glob pattern="*.midi"/>
+  </mime-type>
+</mime-info>
